Bug Fix - Footer Alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -164,6 +164,13 @@ footer {
     background-color: #303030;
 }
 
+/* Footer - spacer */
+.footer-spacer {
+    width: 100%;
+    height: 50px;
+    background-color: #303030;
+}
+
 /* Social networks - list*/
 .social-networks {
     text-align: center;
@@ -228,6 +235,11 @@ footer {
     /* Footer */
     footer {
         position: relative;
+    }
+
+    /* Footer - spacer */
+    .footer-spacer {
+        height: 0;
     }
 
     /* Social networks - items - icons */
